mobile overflow fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -228,6 +228,7 @@ canvas {
         display: block;
         min-height: 100vh;
         flex-flow: row wrap;
+        overflow: scroll;
     }
     .homepageMobileLogo {
         display: block;
